fix: alter line spacing ibm-nlc-row-options
Previously a change was applied that added 2px total height to each nlc-row,
which caused rendering problems with the windows font engine and broken
alignment.

cr-everyone

--- a/client/app/training/training.scss
+++ b/client/app/training/training.scss
@@ -37,8 +37,8 @@
     text-overflow: ellipsis;
   }
   .ibm-nlc-row-options {
-    padding: 6px 8px 0px 0px;
-    line-height: 40px;
+    padding: 0px 8px 0px 0px;
+    line-height: 44px;
   }
   .ibm-nlc-row-options-padded {
     padding: 8px;
